// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MIconFile should render correctly 1`] = `
<svg width="24px" height="24px" class="m-icon m-icon-file">
  <title>m-icon-file:pdf</title>
  <use aria-hidden="true"></use>
</svg>
`;

exports[`MIconFile should render correctly with 100px size 1`] = `
<svg width="100px" height="100px" class="m-icon m-icon-file">
  <title>m-icon-file:pdf</title>
  <use aria-hidden="true"></use>
</svg>
`;

exports[`MIconFile should render title when svgTitle prop is set 1`] = `
<svg width="24px" height="24px" svgTitle="test" class="m-icon m-icon-file">
  <title>m-icon-file:pdf</title>
  <use aria-hidden="true"></use>
</svg>
`;
